# structure_coloring_fkie

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  rviz-cfg.vcg
include/structureColoring/: NodePair.h  NormalEstimationValueClass.h  OcTree.h  RosVisualization.h  RotationHelper.h  StrColParams.h  StructureColoring.h
include/structureColoring/RoSeConnector/: StrColRoSeService.h
include/structureColoring/grids/: ConnectedComponent.h  CylinderGridMap.h  Grid2D.h  GridCell.h  GridMap.h  NodeGridCell.h  PositionedGrid2D.h
include/structureColoring/gui/: GuiNode.h  StructureGL.h
include/structureColoring/histograms/: Histogram.h  Histogram2D.h  OutOfRangeException.h  SphereUniformSampling.h  TriangleDistributionHistogram.h  TriangleDistributionHistogram2D.h  TriangleDistributionHistogramWithRemove.h  WeightedIdxVector.h
include/structureColoring/segcomp/: rangeimageio.h  rangetocoords.h
include/structureColoring/structures/: Cylinder3D.h  CylinderPatch.h  Plane3D.h  PlanePatch.h
scripts/: .gitignore  OnlyDepth10.sh  OnlyDepth8.sh  OnlyDepth9.sh  abw.sh  abwNoRansac.sh  abwRansacOnly.sh  compare.sh  cylinderVariants.sh  kinect.params  kinectCylinder.params  kinectCylinderNoRansac.params  kinectCylinders.sh  kinectNoRansac.sh  kinectOctree10.sh  kinectOctree8.sh  kinectOctree9.sh  kinectPlanes-NoRansac.params  kinectPlanes.sh  kinectRansacOnly.params  kinectRansacOnly.sh  laser.params  onlyDepth8.params  paramsDescription.txt  perc-NoRansac.params  perc.params  perc.sh  percNoRansac.sh  percOctree10.sh  percOctree8.sh  percOctree9.sh  percRansacOnly.sh  ransacOnly.params  segment.sh
src/: GuiMain.cpp  Main.cpp  RosVisualization.cpp  StrColParams.cpp  StructureColoring.cpp
src/RoSeConnector/: StrColRoSeService.cpp  main.cpp
src/compare/: compare.c
src/grids/: CylinderGridMap.cpp  GridMap.cpp
src/gui/: StructureGL.cpp
src/histograms/: SphereUniformSampling.cpp
src/segcomp/: convertToRas.cpp  rangeimageio.cpp  rangetocoords.cpp
src/structures/: CylinderPatch.cpp  PlanePatch.cpp
